--- a/Frank.CrossPlatformWindow.Tests.ConsoleApp/Frank.CrossPlatformWindow.Tests.ConsoleApp.csproj
+++ b/Frank.CrossPlatformWindow.Tests.ConsoleApp/Frank.CrossPlatformWindow.Tests.ConsoleApp.csproj
@@ -11,4 +11,9 @@
       <ProjectReference Include="..\Frank.CrossPlatformWindow\Frank.CrossPlatformWindow.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+<!--      <PackageReference Include="RawInput.Sharp" Version="0.1.3" />-->
+    </ItemGroup>
+
 </Project>
