--- a/Frank.CrossPlatformWindow/Frank.CrossPlatformWindow.csproj
+++ b/Frank.CrossPlatformWindow/Frank.CrossPlatformWindow.csproj
@@ -4,10 +4,6 @@
         <OutputType>Library</OutputType>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
-    
-    <ItemGroup>
-        <PackageReference Include="ppy.SDL3-CS" Version="2024.528.0" />
-    </ItemGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -28,5 +24,10 @@
     <PropertyGroup Condition="'$(OS)'=='OSX'">
         <DefineConstants>MACOS</DefineConstants>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+      <PackageReference Include="ppy.SDL2-CS" Version="1.0.82" />
+    </ItemGroup>
 
 </Project>
